--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.14.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
